--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.22",
     "cross-env": "^7.0.3",
+    "dotenv": "^8.2.0",
     "eslint": "^7.24.0",
     "jest": "^26.6.3",
     "jwt-decode": "^3.1.2",
